# Kinetix

./: .gitignore  readme.md  refferences  test.sh
agent/: Cargo.toml  build.rs
agent/proto/: kinetix.proto
agent/src/: main.rs
agent/src/state/: agent_state.rs  mod.rs
orchestrator/: go.mod  go.sum  main.go
orchestrator/internals/redis_handler/: redis_commands.go
orchestrator/proto/: kinetix.pb.go  kinetix.proto  kinetix_grpc.pb.go
orchestrator/routes/: http_routes.go
