[package]
name = "agent"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.44"
prost = "0.14.3"
prost-types = "0.14.3"
serde = {version = "1.0.228" , features = ["derive"]}
serde_json = "1.0.149"
tokio = {version ="1.50.0" , features = ["full"]}
tonic = "0.14.5"
tonic-prost = "0.14.5"

[build-dependencies]
tonic-prost-build = "0.14.5"
